<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <!-- Play against PC title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/noun_chess_1718374"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <!-- PC Level radio group -->
        <TextView
            android:id="@+id/tv_play_pc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_opponent_level"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>

        <!-- Choose Your Color title -->

        <com.google.android.material.slider.Slider
            android:id="@+id/elo_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:value="800"
            android:valueFrom="200"
            android:valueTo="3000"
            app:labelBehavior="visible"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/tv_choose_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"/>

        <!-- Choose Your Color radio group -->
        <RadioGroup
            android:id="@+id/group_choose_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            >

            <!-- White color radio button -->
            <RadioButton
                android:id="@+id/rb_color_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/White_color"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rb_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Black_color"
                />
        </RadioGroup>
        <!-- Return to main menu button -->

        <Button
            android:id="@+id/play"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_to_play"
            android:layout_marginTop="80dp"/>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>